<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/add_your_note" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="@string/title_image_or_description_is_nessecary" />

    <EditText
        android:id="@+id/titieD"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_bg_t"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imgDV"
            android:background="@drawable/ic_profile"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#00BCD4"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="5dp"
            app:strokeWidth="5dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/imgD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/descD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_bg_t"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#00838F"
        tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_marginEnd="30dp"
            android:background="@drawable/img_bg"
            android:text="@string/save"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/cancelNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_bg"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginStart="30dp"
            android:text="@string/cancel"
            tools:ignore="ButtonOrder,ButtonStyle,VisualLintButtonSize" />

    </LinearLayout>


</LinearLayout>