<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".ui.LoginFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:padding="5dp"
        app:shapeAppearanceOverlay="@style/Circular"
        app:strokeColor="#00BCD4"
        app:strokeWidth="5dp"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/img_bg"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:textColor="@color/black"
        android:textColorHint="#00838F"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_bg"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>